apps/pi-hole/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: internal-only
  namespace: pi-hole
spec:
  ipWhiteList:
    sourceRange:
      - 127.0.0.1/32
      - 192.168.0.0/16
      - 10.0.0.0/8
      - 172.16.0.0/12
