apps/pi-hole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pi-hole
  namespace: pi-hole
  labels:
    app: pi-hole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pi-hole
  template:
    metadata:
      labels:
        app: pi-hole
    spec:
      containers:
        - name: pi-hole
          image: pihole/pihole:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 53
              name: dns-tcp
              protocol: TCP
            - containerPort: 53
              name: dns-udp
              protocol: UDP
            - containerPort: 80
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              memory: 384Mi
          volumeMounts:
            - name: etc-pihole
              mountPath: /etc/pihole
            - name: etc-dnsmasq
              mountPath: /etc/dnsmasq.d
            - name: custom-dns
              mountPath: /etc/pihole/custom.list
              subPath: custom.list
      volumes:
        - name: etc-pihole
          persistentVolumeClaim:
            claimName: pi-hole-etc-pihole
        - name: etc-dnsmasq
          persistentVolumeClaim:
            claimName: pi-hole-etc-dnsmasq
        - name: custom-dns
          configMap:
            name: pi-hole-custom-dns
