apps/pi-hole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pi-hole-dns
  namespace: pi-hole
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
spec:
  selector:
    app: pi-hole
  ports:
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: pi-hole-web
  namespace: pi-hole
spec:
  selector:
    app: pi-hole
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
