apps/pi-hole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pi-hole
  namespace: pi-hole
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pihole.treympick.me
      secretName: pihole-tls
  rules:
    - host: pihole.treympick.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pi-hole-web
                port:
                  number: 80
